# coreumbridge-xrpl

./: .gitignore  Makefile  README.md  go.work  go.work.sum
.github/workflows/: contract-ci.yml  relayer-ci.yml  release.yml
contract/: .gitignore  Cargo.toml  README.md
contract/examples/: schema.rs
contract/src/: address.rs  contract.rs  error.rs  evidence.rs  fees.rs  lib.rs  migration.rs  msg.rs  operation.rs  relayer.rs  signatures.rs  state.rs  tests.rs  tickets.rs  token.rs
infra/composer/: compose.yaml  docker-compose.yaml
integration-tests/: bridge.go  contract.go  conv.go  coreum.go  go.mod  go.sum  init.go  xrpl.go  xrpl_rpc_client_test.go
integration-tests/client/: xrpl_rpc_test.go  xrpl_scanner_test.go
integration-tests/contract/: cancel_pending_operation_test.go  common_test.go  deployment_test.go  halting_test.go  keys_rotation_test.go  migration_test.go  ownership_test.go  sending_test.go  tickets_allocation_test.go  token_registry_test.go  xrpl_base_fee_update_test.go
integration-tests/coreum/: contract_client_test.go
integration-tests/processes/: env_test.go  halting_test.go  keys_rotation_test.go  metrics_test.go  send_from_coreum_to_xrpl_test.go  send_from_xrpl_to_coreum_test.go  send_test.go  sending_bench_test.go  sending_test.go  sending_tracing_test.go  ticket_allocation_test.go  tickets_allocation_test.go  token_registry_test.go  update_xrpl_base_fee_test.go  xrpl_base_fee_update_test.go
integration-tests/relayer/: relayer_test.go
integration-tests/runner/: send_from_xrpl_to_coreum_test.go
integration-tests/stress/: env_test.go  sending_stress_test.go  stress_test.go
integration-tests/xrpl/: matching_test.go  rpc_test.go  scanner_test.go
relayer/: Dockerfile  Makefile  deps.go  go.mod  go.sum
relayer/buildinfo/: info.go
relayer/client/: bridge.go  bridge_test.go
relayer/cmd/: main.go
relayer/coreum/: account.go  config.go  constants.go  contract.go
relayer/fee/: rounding_test.go
relayer/integration-tests/: init.go  relayer_test.go  rpc_client_test.go  xrpl.go
relayer/logger/: logger.go  metrics.go  mock.go  mock_any.go  yaml_console.go  zap.go
relayer/metrics/: collector.go  metrics.go  registry.go  server.go
relayer/processes/: amount.go  amount_test.go  coreum_to_xrpl.go  coreum_to_xrpl_operation_tx.go  coreum_to_xrpl_test.go  fee.go  model.go  model_mocks_test.go  operation_tx.go  process_mocks_test.go  processor.go  processor_test.go  xrpl_to_coreum.go  xrpl_to_coreum_test.go  xrpl_tx_observer.go  xrpl_tx_observer_mocks_test.go  xrpl_tx_observer_test.go  xrpl_tx_submitter.go  xrpl_tx_submitter_operation_tx.go  xrpl_tx_submitter_test.go
relayer/runner/: config.go  config_test.go  runner.go  runner_test.go
relayer/xrpl/: constants.go  (+16 more)
spec/: spec.md
(+65 files in other folders)
