[package]
name = "coreumbridge-xrpl"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
bs58 = "0.5.0"
coreum-wasm-sdk = "0.2.4"
cosmwasm-schema = "1.5.3"
cosmwasm-std = { version = "1.5.4", features = ["cosmwasm_1_1"] }
cw-ownable = "0.5.1"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw2 = "1.1.2"
hex = "0.4.3"
serde_json = "1.0.113"
sha2 = "0.10.8"
thiserror = "1.0.56"

[dev-dependencies]
coreum-test-tube = {git = 'https://github.com/CoreumFoundation/test-tube.git'}
ripple-keypairs = "0.1.0"
rand = "0.8.5"

[patch.crates-io]
ripple-keypairs = {git = 'https://github.com/CoreumFoundation/ripple-keypairs-rust.git'}
