[package]
name = "coreumbridge-xrpl"
version = "0.2.0"
authors = ["Coreum"]
edition = "2021"

[features]
backtraces = []
library = []

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
bs58 = "0.5.0"
coreum-wasm-sdk = "1.2.1"
cosmwasm-schema = "2.2.2"
cosmwasm-std = { version = "2.2.2", features = ["cosmwasm_1_1"] }
cw-ownable = "2.1.0"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw2 = "2.0.0"
hex = "0.4.3"
serde_json = "1.0.113"
sha2 = "0.10.8"
thiserror = "2.0.12"

[dev-dependencies]
coreum-test-tube = {git = 'https://github.com/CoreumFoundation/test-tube.git'}
ripple-keypairs = "0.1.0"
rand = "0.9.1"

[patch.crates-io]
ripple-keypairs = {git = 'https://github.com/CoreumFoundation/ripple-keypairs-rust.git'}
